--- a/Async.Tests/Async.Tests.csproj
+++ b/Async.Tests/Async.Tests.csproj
@@ -44,10 +44,6 @@
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.Runtime.InteropServices.WindowsRuntime" />
-    <Reference Include="System.Runtime.WindowsRuntime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Reference Assemblies\Microsoft\Framework\.NETCore\v4.5\System.Runtime.WindowsRuntime.dll</HintPath>
-    </Reference>
     <Reference Include="Windows" />
   </ItemGroup>
   <Choose>
@@ -71,6 +67,7 @@
     <Compile Include="TestDynamicMethodBinder.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Waiter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AsyncCallJobSource\Nivot.PowerShell.Async.csproj">
