--- a/AsyncCallJobSource/Nivot.PowerShell.Async.csproj
+++ b/AsyncCallJobSource/Nivot.PowerShell.Async.csproj
@@ -42,10 +42,6 @@
     </Reference>
     <Reference Include="System.Runtime" />
     <Reference Include="System.Runtime.InteropServices.WindowsRuntime" />
-    <Reference Include="System.Runtime.WindowsRuntime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Reference Assemblies\Microsoft\Framework\.NETCore\v4.5\System.Runtime.WindowsRuntime.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncCallInfo.cs" />
+    <Compile Include="AsyncResult.cs" />
+    <Compile Include="PSPromise.cs" />
     <Compile Include="DynamicMethodBinder.cs" />
     <Compile Include="Jobs\AsyncCallJob.cs" />
     <Compile Include="Jobs\ASyncCallJobInvocationInfo.cs" />
